src/css/NavBar.module.css
.nav-container{
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(0, 0, 0, 0.6);
    width: 100%;
    height: 50px;
    gap: 50px;
}
.nav-bar--disabled{
    position: fixed;
    width: 100%;
    top: 0;
    transform: translateY(-100%);
    transition: all 0.2s ease-in-out;
}
.nav-bar--disabled:after{
    opacity: 0;
    content: '';
    display: block;
    width: 100%;
    height: 1px;
    background-color: var(--color-yellow);
    transition: all 0.2s ease-in-out;
}
.nav-bar--enabled{
    position: fixed;
    width: 100%;
    top: 0;
    transform: translateY(0);
    transition: all 0.2s ease-in-out;
    z-index: 100;
    backdrop-filter: blur(4px);
}
.nav-bar--enabled::after{
    opacity: 1;
    content: '';
    display: block;
    width: 100%;
    height: 1px;
    background-color: var(--color-yellow);
    transition: all 0.2s ease-in-out;
}
.nav-bar__open{
    position: absolute;
    top: 10px;
    right: 10px;
    width: 50px;
}
.nav-bar__item{
    display: flex;
    justify-content: center;
}
.nav-bar__item > button{
    color: var(--color-yellow);
    font-size: 1.5rem;
    text-shadow: none;
    text-decoration: none;
    background-color: transparent;
    border: solid transparent 2px;
    border-radius: 5px;
    transition: all 0.3s ease-in-out;
    padding: 0.3rem 1rem ;
}
.nav-bar__item > button:hover{
    text-shadow: var(--color-brown--bg) -3px 3px 3px;
    border: solid var(--color-brown--bg) 2px;
    transition: all 0.3s ease-in-out;
}
.nav__logo--link{
    width: auto;
    height: 50px;
    position: absolute;
    left: 10px;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: center;
}
.nav-bar__item--social{
    position: absolute;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    right: 0;
    top: 0;
    height: 50px;
    width: 150px;
}
.nav-bar__item--social__link{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    height: 100%;
}
.nav__logo--img{
    height: 40px;
    width: 40px;
    filter: drop-shadow(var(--color-yellow) 0 0 4px);
    transition: transform 0.3s ease-in-out;
}
.nav__logo--img:hover{
    transform: scale(1.05);
}
/* Responsive */
@media (max-width: 1080px){
    .nav-container{
        gap: 20px;
    }
}
@media(max-width: 960px){
    .nav-bar--enabled, .nav-bar--disabled{
        display: none;
    }
}

